FEAT: Update custom 404, 403 and 500 html templates

--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>This is a test custom 403.html template with exception: {{ exception }}</div>
+    <div>Error: 403</div>
+    <div>Sorry, permission is denied</div>
 {% endblock %}
