--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>This is a test custom 404.html template with exception: {{ exception }}</div>
+    <div>Error: 404</div>
+    <div>Sorry, this page was not found</div>
 {% endblock %}
