--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>This is a test custom 500.html template with exception: {{ exception }}</div>
+    <div>Error: 500</div>
+    <div>Sorry, there wass a server error</div>
 {% endblock %}
