FEAT: Add template, view and url for landing page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,9 +2,13 @@
 {% load static %}
 
 {% block extra_title %}
-    rewild your way to carbon neutrality and beyond
-{% endblockk %}
+    Rewild your way to carbon neutrality and beyond
+{% endblock %}
 
 {% block description %}
     <meta name="description" content="On this page you can learn about wild carbon and what we can do for you">
-{% endblock description %}
+{% endblock %}
+
+{% block content %}
+    <div>Sample Content</div>
+{% endblock%}
