--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Wild Carbon: {% block extra_title %}{% endblock %}</title>  
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wild Carbon: {% block extra_title %}{% endblock %}</title>
     {% block description %}
     {% endblock description %}
     <meta name="keywords" content="carbon sequestration, co2, rewilding, re-wilding, carbon footprint">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon image supplied by https://favicon.io/favicon-generator/ -->
     <link rel="icon" sizes="any" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <body>
     {% block content %}
