--- a/templates/base.html
+++ b/templates/base.html
@@ -22,22 +22,30 @@
 </head>
 <body>
     <!-- Navigation bar skeleton provided by bootstrap -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Wild Carbon</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">First link</a>
-                    </li>
-                </ul>
+    <nav class="navbar navbar-expand-lg">
+        <div class="nav-grid">
+            <div class="mobile-nav-header-left">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
+            <div class="mobile-nav-header-logo">
+                <a class="navbar-brand" href="#">
+                    <div class="logo-company">Wild Carbon</div>
+                    <div class="logo-tagline">Rewild your way to carbon neutrality</div>
+                </a>
+            </div>
+            <div class="mobile-nav-header-right"></div>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">First link</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
