--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 
 /* css custom variables */
 :root {
-    --body-backgounrd-colour: rgba(30, 88, 45, 0.1);
+    --body-background-colour: rgba(30, 88, 45, 0.1);
     --header-footer-background-colour: rgba(18, 53, 27, 0.1);
 }
 
@@ -12,39 +12,58 @@ body {
 }
 
 /* Header css */
-.mobile-nav-header-left {
-    grid-area: mobile-nav-header-left;
+.nav-header-left,
+.nav-header-right,
+.nav-header-logo,
+.nav-header-nav-items {
     display: flex;
-    align-content: center;
     justify-content: center;
 }
 
-.mobile-nav-header-logo {
-    grid-area: mobile-nav-header-logo;
+.nav-header-left {
+    grid-area: nav-header-left;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.nav-header-logo {
+    grid-area: nav-header-logo;
     justify-self: center;
     align-self: center;
-    display: flex;
-    justify-content: center;
     width: 100%;
 }
 
-.mobile-nav-header-right {
-    grid-area: mobile-nav-header-right;
+.nav-header-right {
+    grid-area: nav-header-right;
+}
+
+.nav-header-nav-items {
+    grid-area: nav-header-nav-items;
+    /* width: 100%; */
 }
 
 .nav-grid {
     display: grid;
     grid-template-columns: 75px auto 75px;
-    grid-template-areas: "mobile-nav-header-left mobile-nav-header-logo mobile-nav-header-right";
+    grid-template-rows: auto;
+    grid-template-areas:
+        "nav-header-left nav-header-logo nav-header-right"
+        "nav-header-nav-items nav-header-nav-items nav-header-nav-items";
     width: 100%;
 }
 
 .navbar-toggler {
+    height: 40px;
+    width: 40px;
     padding: 4px 4px;
 }
 
 .navbar-brand {
     margin: 0;
+}
+
+.nav-link {
+    padding: 11px;
 }
 
 .logo-company {
@@ -65,5 +84,25 @@ body {
     .logo-tagline {
         display: flex;
         font-size: small;
+    }
+}
+
+/* Add media query for wide screens */
+@media screen and (min-width: 992px) {
+    .nav-header-left {
+        display: none;
+    }
+
+    .nav-header-right {
+        justify-self: end;
+    }
+
+    .nav-grid {
+        display: grid;
+        grid-template-columns: 300px auto 150px;
+        grid-template-rows: none;
+        grid-template-areas:
+            "nav-header-logo nav-header-nav-items nav-header-right";
+        width: 100%;
     }
 }
