FEAT: Add home background image

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,5 +10,14 @@
 {% endblock %}
 
 {% block content %}
-    <div>Sample Content</div>
+    <main>
+        <div class="page-title-container">
+            <div>
+
+            </div>
+        </div>
+        <h2>What we do</h2>
+        <h2>Coming Soon</h2>
+        <h2>Newsletter</h2>
+    </main>
 {% endblock%}
