--- a/templates/base.html
+++ b/templates/base.html
@@ -21,33 +21,36 @@
     <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Navigation bar skeleton provided by bootstrap -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="nav-grid">
-            <div class="nav-header-left">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <header>
+        <!-- Navigation bar skeleton provided by bootstrap -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="nav-grid">
+                <div class="header-nav-left">
+                    <button class="navbar-toggler navbar-toggler-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="header-nav-logo">
+                    <a class="navbar-brand" href="#">
+                        <div class="logo-company">Wild Carbon</div>
+                        <div class="logo-tagline">Rewild your way to carbon neutrality</div>
+                    </a>
+                </div>
+                <div class="header-nav-right">Placeholder</div>
+                <div class="header-nav-items collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">First link</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="nav-header-logo">
-                <a class="navbar-brand" href="#">
-                    <div class="logo-company">Wild Carbon</div>
-                    <div class="logo-tagline">Rewild your way to carbon neutrality</div>
-                </a>
-            </div>
-            <div class="nav-header-right">Placeholder</div>
-            <div class="nav-header-nav-items collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">First link</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        </nav>
+        <!-- End of bootstrap navigation -->
+    </header>
 
     {% block content %}
     {% endblock %}
