--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,9 @@
 :root {
     --body-background-colour: rgba(30, 88, 45, 0.1);
     --header-footer-background-colour: rgba(9, 27, 14, 0.9);
-    --main-font-colour: rgba(245, 255, 189, 0.8);
+    --main-font-colour: rgba(249, 255, 215, 0.8);
     --button-background: rgba(249, 255, 215, 0.8);
+    --button-active-background: rgba(132, 138, 91, 0.8);
 }
 
 html,
@@ -18,9 +19,13 @@ body {
 header {
     position: relative;
     z-index: 1;
-    background-color: var(--header-footer-background-colour);
     color: var(--main-font-colour);
-    backdrop-filter: blur(1px);
+    height: 60px;
+}
+
+.navbar {
+    padding: 0;
+    height: 100%;
 }
 
 .header-nav-left,
@@ -29,26 +34,29 @@ header {
 .header-nav-items {
     display: flex;
     justify-content: center;
-    align-self: center;
+    align-items: center;
 }
 
 .header-nav-left {
     grid-area: header-nav-left;
     flex-wrap: wrap;
-    justify-content: center;
+    min-height: 60px;
 }
 
 .header-nav-logo {
     grid-area: header-nav-logo;
     width: 100%;
+    min-height: 60px;
 }
 
 .header-nav-right {
     grid-area: header-nav-right;
+    min-height: 60px;
 }
 
 .header-nav-items {
     grid-area: header-nav-items;
+    position: relative;
 }
 
 .nav-grid {
@@ -71,7 +79,16 @@ header {
     background-color: var(--button-background);
 }
 
+.navbar-toggler-style:active {
+    background-color: var(--button-active-background);
+}
+
 .navbar-brand {
+    margin: 0;
+}
+
+.navbar-nav {
+    width: 100%;
     margin: 0;
 }
 
@@ -92,16 +109,37 @@ header {
     display: none;
 }
 
+header,
+.header-nav-items,
+footer {
+    background-color: var(--header-footer-background-colour);
+    color: var(--main-font-colour);
+    backdrop-filter: blur(1px);
+}
+
 /* Main section styles */
-main {
+.main-container {
     position: absolute;
-    width: 100%;
     top: 0;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
 }
 
 .page-title-container {
     background: url('/static/media/images/home-glade.jpg') no-repeat center center/cover;
     height: 100vh;
+}
+
+footer {
+    width: 100%;
+    height: 60px;
+    flex-grow: 0;
 }
 
 /* Media queries */
@@ -121,8 +159,12 @@ main {
         display: none;
     }
 
-    .nav-header-right {
+    .header-nav-right {
         justify-self: end;
+    }
+
+    .header-nav-items {
+        justify-content: flex-start;
     }
 
     .nav-grid {
