--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header-nav-right">Placeholder</div>
                 <div class="header-nav-items collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
@@ -51,9 +51,13 @@
         </nav>
         <!-- End of bootstrap navigation -->
     </header>
-
-    {% block content %}
-    {% endblock %}
+    <div class="main-container">
+        <main>
+            {% block content %}
+            {% endblock %}
+        </main>
+        <footer>Placeholder text</footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
