--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,15 @@
                     </a>
                 </div>
                 <div class="header-nav-right">Placeholder</div>
-                <div class="header-nav-items collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#">First link</a>
                         </li>
-                        <li class="nav-item">
+                                               <li class="nav-item">
+                            <a class="nav-link" href="#">First link</a>
+                        </li>
+                                               <li class="nav-item">
                             <a class="nav-link" href="#">First link</a>
                         </li>
                     </ul>
