--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,11 @@ header {
     color: var(--main-font-colour);
 }
 
+.nav-link:hover {
+    color: var(--main-font-colour);
+    text-decoration: underline;
+}
+
 .logo-company {
     color: var(--main-font-colour);
     display: flex;
@@ -139,7 +144,24 @@ main {
     height: 100vh;
 }
 
+.footer-left {
+    grid-area: footer-left;
+}
+
+.footer-middle {
+    grid-area: footer-middle;
+}
+
+.footer-right {
+    grid-area: footer-right;
+}
+
 footer {
+    display: grid;
+    grid-template-columns: 75px auto 75px;
+    grid-template-areas: "footer-left footer-middle footer-right";
+    justify-items: center;
+    align-items: center;
     width: 100%;
     height: 60px;
     flex-grow: 0;
