--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="header-nav-logo">
                     <a class="navbar-brand" href="#">
-                        <div class="logo-company">Wild Carbon</div>
+                        <div class="logo-company"><strong>Wild Carbon</strong></div>
                         <div class="logo-tagline">Rewild your way to carbon neutrality</div>
                     </a>
                 </div>
@@ -59,7 +59,15 @@
             {% block content %}
             {% endblock %}
         </main>
-        <footer>Placeholder text</footer>
+        <footer>
+            <div class="footer-left">left</div>
+            <div class="footer-middle">
+                <a class="navbar-brand" href="#">
+                    <div class="logo-company"><strong>Wild Carbon</strong></div>
+                </a>
+            </div>
+            <div class="footer-right">right</div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
