--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,10 @@
     --header-footer-background-colour: rgba(9, 27, 14, 0.9);
     --main-font-colour: rgba(249, 255, 215, 0.8);
     --button-background: rgba(249, 255, 215, 0.8);
+    --brand-background-hover: rgba(38, 70, 47, 1);
+    --brand-background-colour: rgba(38, 70, 47, 0.7);
     --button-active-background: rgba(132, 138, 91, 0.8);
+    --header-height: 75px;
 }
 
 html,
@@ -21,7 +24,7 @@ header {
     position: relative;
     z-index: 1;
     color: var(--main-font-colour);
-    height: 60px;
+    height: fit-content;
 }
 
 .navbar {
@@ -41,18 +44,15 @@ header {
 .header-nav-left {
     grid-area: header-nav-left;
     flex-wrap: wrap;
-    min-height: 60px;
 }
 
 .header-nav-logo {
     grid-area: header-nav-logo;
     width: 100%;
-    min-height: 60px;
 }
 
 .header-nav-right {
     grid-area: header-nav-right;
-    min-height: 60px;
     width: 100%;
 }
 
@@ -63,6 +63,7 @@ header {
 .nav-grid {
     display: grid;
     grid-template-columns: 75px auto 75px;
+    grid-template-rows: var(--header-height);
     grid-template-areas: "header-nav-left header-nav-logo header-nav-right";
     width: 100%;
 }
@@ -83,11 +84,17 @@ header {
 
 .navbar-collapse {
     width: 100vw;
-    background-color: var(--header-footer-background-colour);
 }
 
 .navbar-brand {
+    background-color: var(--brand-background-colour);
+    border-radius: 7px;
+    padding: 7px;
     margin: 0;
+}
+
+.navbar-brand:hover {
+    background-color: var(--brand-background-hover);
 }
 
 .navbar-nav {
@@ -118,7 +125,6 @@ header {
 }
 
 header,
-.header-nav-items,
 footer {
     background-color: var(--header-footer-background-colour);
     color: var(--main-font-colour);
@@ -140,6 +146,7 @@ main {
 }
 
 .page-title-container {
+    /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
     background: url('/static/media/images/home-glade.jpg') no-repeat center center/cover;
     height: 100vh;
 }
@@ -157,13 +164,13 @@ main {
 }
 
 footer {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 75px auto 75px;
-    grid-template-areas: "footer-left footer-middle footer-right";
+    grid-template-areas: "footer-left footer-middle footer-right"; */
     justify-items: center;
     align-items: center;
     width: 100%;
-    height: 60px;
+    height: fit-content;
     flex-grow: 0;
 }
 
