--- a/templates/base.html
+++ b/templates/base.html
@@ -2,74 +2,75 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Wild Carbon: {% block extra_title %}{% endblock %}</title>
-    {% block description %}
-    {% endblock description %}
-    <meta name="keywords" content="carbon sequestration, co2, rewilding, re-wilding, carbon footprint">
+    <head>
+        <title>Wild Carbon: {% block extra_title %}{% endblock %}</title>
+        {% block description %}
+        {% endblock description %}
+        <meta name="keywords" content="carbon sequestration, co2, rewilding, re-wilding, carbon footprint">
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon image supplied by https://favicon.io/favicon-generator/ -->
-    <link rel="icon" sizes="any" href="{% static 'favicon.ico' %}">
-    <!-- css links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- js links  -->
-    <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
-        <!-- Navigation bar skeleton provided by bootstrap -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="nav-grid">
-                <div class="header-nav-left">
-                    <button class="navbar-toggler navbar-toggler-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Favicon image supplied by https://favicon.io/favicon-generator/ -->
+        <link rel="icon" sizes="any" href="{% static 'favicon.ico' %}">
+        <!-- css links -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <!-- js links  -->
+        <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <!-- Navigation bar skeleton provided by bootstrap -->
+            <nav class="navbar navbar-expand-lg">
+                <div class="nav-grid">
+                    <div class="header-nav-left">
+                        <button class="navbar-toggler navbar-toggler-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="header-nav-logo">
+                        <a class="navbar-brand" href="#">
+                            <div class="logo-company"><strong>Wild Carbon</strong></div>
+                            <div class="logo-tagline">Rewild your way to carbon neutrality</div>
+                        </a>
+                    </div>
+                    <div class="header-nav-right">Placeholder</div>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">First link</a>
+                            </li>
+                                                <li class="nav-item">
+                                <a class="nav-link" href="#">First link</a>
+                            </li>
+                                                <li class="nav-item">
+                                <a class="nav-link" href="#">First link</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="header-nav-logo">
+            </nav>
+            <!-- End of bootstrap navigation -->
+        </header>
+        <div class="main-container">
+            <main>
+                {% block content %}
+                {% endblock %}
+            </main>
+            <footer>
+                <div class="footer-left">left</div>
+                <div class="footer-middle">
                     <a class="navbar-brand" href="#">
                         <div class="logo-company"><strong>Wild Carbon</strong></div>
-                        <div class="logo-tagline">Rewild your way to carbon neutrality</div>
+                        <div>test</div>
                     </a>
                 </div>
-                <div class="header-nav-right">Placeholder</div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">First link</a>
-                        </li>
-                                               <li class="nav-item">
-                            <a class="nav-link" href="#">First link</a>
-                        </li>
-                                               <li class="nav-item">
-                            <a class="nav-link" href="#">First link</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- End of bootstrap navigation -->
-    </header>
-    <div class="main-container">
-        <main>
-            {% block content %}
-            {% endblock %}
-        </main>
-        <footer>
-            <div class="footer-left">left</div>
-            <div class="footer-middle">
-                <a class="navbar-brand" href="#">
-                    <div class="logo-company"><strong>Wild Carbon</strong></div>
-                </a>
-            </div>
-            <div class="footer-right">right</div>
-        </footer>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-</body>
+                <div class="footer-right">right</div>
+            </footer>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    </body>
 </html>
