FEAT: Add 'back to top' button

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,15 @@
                 {% endblock %}
             </main>
             <footer>
-                <div class="footer-left">left</div>
+                <div class="footer-left">
+                    <!-- Icon supplied by font awesome https://fontawesome.com/  -->
+                    <img class="back-to-top-icon" role="button" src="static/static_media/icon/home-circle-up-solid.svg" alt="Back to top up arrow button">
+                </div>
                 <div class="footer-middle">
                     <a class="navbar-brand" href="#">
                         <div class="logo-company"><strong>Wild Carbon</strong></div>
-                        <div>test</div>
                     </a>
+                    <a class="privacy-policy link" href="#">Privacy Policy</a>
                 </div>
                 <div class="footer-right">right</div>
             </footer>
