--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,11 +102,13 @@ header {
     margin: 0;
 }
 
+.link,
 .nav-link {
     padding: 11px;
     color: var(--main-font-colour);
 }
 
+.link:hover,
 .nav-link:hover {
     color: var(--main-font-colour);
     text-decoration: underline;
@@ -147,15 +149,30 @@ main {
 
 .page-title-container {
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url('/static/media/images/home-glade.jpg') no-repeat center center/cover;
+    background: url("/static/static_media/images/home-glade.jpg") no-repeat center center/cover;
     height: 100vh;
 }
 
 .footer-left {
     grid-area: footer-left;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    height: 60px;
+    width: 60px;
+
+}
+
+.footer-left:hover {
+    border-radius: 50%;
+    border: 3px solid var(--button-background);
 }
 
 .footer-middle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     grid-area: footer-middle;
 }
 
@@ -164,14 +181,27 @@ main {
 }
 
 footer {
-    /* display: grid;
+    display: grid;
     grid-template-columns: 75px auto 75px;
-    grid-template-areas: "footer-left footer-middle footer-right"; */
+    grid-template-areas: "footer-left footer-middle footer-right";
     justify-items: center;
     align-items: center;
     width: 100%;
     height: fit-content;
     flex-grow: 0;
+    padding: 7px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.privacy-policy {
+    padding: 0;
+}
+
+.back-to-top-icon {
+    height: 50px;
 }
 
 /* Media queries */
