--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
             <footer>
                 <div class="footer-left">
                     <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                    <img class="back-to-top-icon" role="button" src="static/static_media/icon/home-circle-up-solid.svg" alt="Back to top up arrow button">
+                    <img class="back-to-top-button" id="back-to-top-button" role="button" src="static/static_media/icon/home-circle-up-solid.svg" alt="Back to top up arrow button">
                 </div>
                 <div class="footer-middle">
                     <a class="navbar-brand" href="#">
@@ -75,5 +75,6 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <script src="{% static 'js/wild_carbon_base.js' %}"></script>
     </body>
 </html>
