--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,20 @@
                         <div class="logo-company"><strong>Wild Carbon</strong></div>
                     </a>
                     <a class="privacy-policy link" href="#">Privacy Policy</a>
+                    <div>&copy 2023 Wild Carbon</div>
                 </div>
-                <div class="footer-right">right</div>
+                <div class="footer-right">
+                    <span class="footer-right-contact">
+                        <a href="#" class="contact-icon-container" target="_blank" rel="external nofollow noopener" aria-label="Contact details for Wild Carbon">
+                            <img src="static/static_media/icon/home-contact.svg"  class="contact-icon" alt="Contact us icon">
+                        </a>
+                    </span>
+                    <span class="footer-right-facebook">
+                        <a href="#" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
+                            <img src="static/static_media/icon/home-facebook-brands.svg"  class="social-media-icon" alt="Facebook social media icon">
+                        </a>
+                    </span>
+                </div>
             </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
