FEAT: Make footer icons responsive

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,10 @@
             </main>
             <footer>
                 <div class="footer-left">
-                    <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                    <img class="back-to-top-button" id="back-to-top-button" role="button" src="static/static_media/icon/home-circle-up-solid.svg" alt="Back to top up arrow button">
+                    <span class="footer-left-back-to-top">
+                        <!-- Icon supplied by font awesome https://fontawesome.com/  -->
+                        <img class="back-to-top-button" id="back-to-top-button" role="button" src="static/static_media/icon/home-circle-up-solid.svg" alt="Back to top up arrow button">
+                    </span>
                 </div>
                 <div class="footer-middle">
                     <a class="navbar-brand" href="#">
@@ -78,7 +80,7 @@
                         </a>
                     </span>
                     <span class="footer-right-facebook">
-                        <a href="#" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
+                        <a href="#" class="facebook-link-container" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
                             <img src="static/static_media/icon/home-facebook-brands.svg"  class="social-media-icon" alt="Facebook social media icon">
                         </a>
                     </span>
