--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,8 +161,8 @@ main {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    height: 60px;
-    width: 60px;
+    height: 4rem;
+    width: 4rem;
 }
 
 .footer-left:hover,
@@ -184,18 +184,18 @@ main {
     display: flex;
     justify-content: center;
     align-content: center;
-    flex-wrap: wrap;
     column-gap: 3px;
 }
 
+.footer-left-back-to-top,
 .footer-right-contact,
 .footer-right-facebook {
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    height: 60px;
-    width: 60px;
+    height: 4rem;
+    width: 4rem;
 }
 
 footer {
@@ -220,12 +220,21 @@ footer {
 
 .back-to-top-button,
 .social-media-icon {
-    height: 50px;
+    height: 3.5rem;
+}
+
+.facebook-link-container {
+    height: 4rem;
+    width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
 .contact-icon-container {
-    width: 50px;
-    height: 50px;
+    height: 3.5rem;
+    width: 3.5rem;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -235,7 +244,7 @@ footer {
 }
 
 .contact-icon {
-    width: 31px;
+    width: 2rem;
 }
 
 /* Media queries */
@@ -246,11 +255,6 @@ footer {
     .logo-tagline {
         display: flex;
         font-size: small;
-    }
-
-    .footer-left {
-        height: 60px;
-        width: 60px;
     }
 }
 
