FEAT: Update home page icon paths to be static file paths

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                 <div class="footer-left">
                     <span class="footer-left-back-to-top">
                         <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                        <img class="back-to-top-button" id="back-to-top-button" role="button" src="/static/static_media/icons/home-circle-up-solid.svg" alt="Back to top up arrow button">
+                        <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/home-circle-up-solid.svg' %}" alt="Back to top up arrow button">
                     </span>
                 </div>
                 <div class="footer-middle">
@@ -77,13 +77,13 @@
                     <span class="footer-right-contact">
                         <a href="#" class="contact-icon-container" target="_blank" rel="external nofollow noopener" aria-label="Contact details for Wild Carbon">
                             <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                            <img src="/static/static_media/icons/home-contact.svg"  class="contact-icon" alt="Contact us icon">
+                            <img src="{% static 'static_media/icons/home-contact.svg' %}"  class="contact-icon" alt="Contact us icon">
                         </a>
                     </span>
                     <span class="footer-right-facebook">
                         <a href="#" class="facebook-link-container" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
                             <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                            <img src="/static/static_media/icons/home-facebook-brands.svg"  class="social-media-icon" alt="Facebook social media icon">
+                            <img src="{% static 'static_media/icons/home-facebook-brands.svg' %}"  class="social-media-icon" alt="Facebook social media icon">
                         </a>
                     </span>
                 </div>
