FEAT: Add JS to remove hover effect after button click

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,6 +222,8 @@ main {
     display: flex;
     justify-content: center;
     align-content: center;
+    font-size: smaller;
+    white-space: nowrap;
 }
 
 .back-to-top-button,
