--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
             <footer>
                 <div class="footer-inner-container">
                     <div class="footer-left">
-                        <div class="footer-left-back-to-top">
+                        <div class="footer-left-back-to-top" id="footer-left-back-to-top">
                             <!-- Icon supplied by font awesome https://fontawesome.com/  -->
                             <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/home-circle-up-solid.svg' %}" alt="Back to top up arrow button">
                         </div>
@@ -75,13 +75,13 @@
                         <div class="copyright-notice">&copy 2023 Wild Carbon</div>
                     </div>
                     <div class="footer-right">
-                        <div class="footer-right-contact">
+                        <div class="footer-right-contact" id="footer-right-contact">
                             <a href="#" class="contact-icon-container" target="_blank" rel="external nofollow noopener" aria-label="Contact details for Wild Carbon">
                                 <!-- Icon supplied by font awesome https://fontawesome.com/  -->
                                 <img src="{% static 'static_media/icons/home-contact.svg' %}"  class="contact-icon" alt="Contact us icon">
                             </a>
                         </div>
-                        <div class="footer-right-facebook">
+                        <div class="footer-right-facebook" id="footer-right-facebook">
                             <a href="#" class="facebook-link-container" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
                                 <!-- Icon supplied by font awesome https://fontawesome.com/  -->
                                 <img src="{% static 'static_media/icons/home-facebook-brands.svg' %}"  class="social-media-icon" alt="Facebook social media icon">
