FEAT: Add base.html main-container style block

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,8 @@
     Rewild your way to carbon neutrality and beyond
 {% endblock %}
 
+{% block main_style %}main-container-absolute{% endblock %}
+
 {% block description %}
     <meta name="description" content="On this page you can learn about wild carbon and what we can do for you">
 {% endblock %}
