--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
             </nav>
             <!-- End of bootstrap navigation -->
         </header>
-        <div class="main-container">
+        <div class="main-container {% block main_style %}{% endblock %}">
             <main>
                 {% block content %}
                 {% endblock %}
