--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,12 +138,15 @@ footer {
 
 /* Main section styles */
 .main-container {
-    position: absolute;
-    top: 0;
     width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.main-container-absolute {
+    position: absolute;
+    top: 0;
 }
 
 main {
