--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block main_style %}main-container-offset{% endblock %}
+
 {% block content %}
     <div>Error: 404</div>
     <div>Sorry, this page was not found</div>
