--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
 :root {
     --body-background-colour: rgba(249, 255, 215, 0.8);
     --header-footer-background-colour: rgba(9, 27, 14, 0.9);
+    --modal-background-colour: rgba(9, 27, 14, 1);
     --main-font-colour: rgba(249, 255, 215, 0.8);
     --button-background: rgba(249, 255, 215, 0.8);
     --button-background-solid: rgb(249, 255, 215);
@@ -201,6 +202,10 @@ main {
     width: var(--footer-icon-size);
 }
 
+.footer-right-facebook {
+    display: none;
+}
+
 .footer-inner-container {
     display: grid;
     grid-template-columns: 130px auto 130px;
@@ -252,10 +257,50 @@ main {
     flex-wrap: wrap;
     background-color: var(--button-background-solid);
     border-radius: 50%;
+    padding: 0;
+    border-width: 0;
 }
 
 .contact-icon {
     width: calc(var(--footer-icon-size)/2);
+}
+
+/* Modal styles */
+.display-none {
+    display: none;
+}
+
+.contact-us-modal-container {
+    position: absolute;
+    height: 100vh;
+    width: 100vh;
+    /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
+    background: url("/static/static_media/images/home-glade.jpg") no-repeat center center/cover;
+    height: 100vh;
+    z-index: 2;
+    top: 0;
+    left: 0;
+}
+
+
+.contact-us-inner-container {
+    height: 100%;
+    width: 100%;
+    background-color: var(--header-footer-background-colour);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.contact-us-modal {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    height: 50%;
+    width: 50%;
+    background-color: var(--modal-background-colour);
+    color: var(--main-font-colour);
 }
 
 /* Media queries */
