--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                         <a class="navbar-brand" href="#">
                             <div class="logo-company"><strong>Wild Carbon</strong></div>
                         </a>
-                        <a class="privacy-policy link" href="#">Privacy Policy</a>
+                        <a id="privacy-policy-link" class="privacy-policy" href="#">Privacy Policy</a>
                         <div class="copyright-notice">&copy 2023 Wild Carbon</div>
                     </div>
                     <div class="footer-right">
@@ -96,12 +96,20 @@
                     <div class="contact-us-modal">
                         <h2>Contact Us</h2>
                         <div>Mayo, Ireland</div>
-                        <div>wild.carbon.sequestration@gmail.com</div>
-                        <button id="contact-us-close button" class="contact-us-close-button">Done</button>
+                        <div class="contact-email">wild.carbon.sequestration@gmail.com</div>
+                        <button id="contact-us-close-button" class="contact-us-close-button">Done</button>
                     </div>
                 </div>
             </section>
             <!-- Privacy policy modal -->
+            <section id="privacy-policy-modal" class="privacy-policy-modal-container display-none">
+                <div class="privacy-policy-inner-container">
+                    <div class="privacy-policy-modal">
+                        {% include 'includes/privacy_policy.html' %}
+                        <button id="contact-us-close button" class="contact-us-close-button">Done</button>
+                    </div>
+                </div>
+            </section>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
