--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
                 <div class="privacy-policy-inner-container">
                     <div class="privacy-policy-modal">
                         {% include 'includes/privacy_policy.html' %}
-                        <button id="contact-us-close button" class="contact-us-close-button">Done</button>
+                        <button id="privacy-policy-close-button" class="privacy-policy-close-button">Done</button>
                     </div>
                 </div>
             </section>
