--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         </button>
                     </div>
                     <div class="header-nav-logo">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="{% url 'home' %}">
                             <div class="logo-company"><strong>Wild Carbon</strong></div>
                             <div class="logo-tagline">Rewild your way to carbon neutrality</div>
                         </a>
@@ -40,12 +40,12 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">First link</a>
                             </li>
-                                                <li class="nav-item">
-                                <a class="nav-link" href="#">First link</a>
-                            </li>
-                                                <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">First link</a>
                             </li>
                         </ul>
@@ -64,27 +64,27 @@
                     <div class="footer-left">
                         <div class="footer-left-back-to-top" id="footer-left-back-to-top">
                             <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                            <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/home-circle-up-solid.svg' %}" alt="Back to top up arrow button">
+                            <img class="back-to-top-button" id="back-to-top-button" role="button" src="{% static 'static_media/icons/base-circle-up-solid.svg' %}" alt="Back to top up arrow button">
                         </div>
                     </div>
                     <div class="footer-middle">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="{% url 'home' %}">
                             <div class="logo-company"><strong>Wild Carbon</strong></div>
                         </a>
-                        <a id="privacy-policy-link" class="privacy-policy" href="#">Privacy Policy</a>
+                        <div role="button" aria-label="Privacy-Policy" id="privacy-policy-link" class="privacy-policy">Privacy Policy</div>
                         <div class="copyright-notice">&copy 2023 Wild Carbon</div>
                     </div>
                     <div class="footer-right">
                         <div class="footer-right-contact" id="footer-right-contact">
                             <button id="contact-us-button" class="contact-icon-container" aria-label="Contact details for Wild Carbon">
                                 <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                                <img src="{% static 'static_media/icons/home-contact.svg' %}"  class="contact-icon" alt="Contact us icon">
+                                <img src="{% static 'static_media/icons/base-contact.svg' %}"  class="contact-icon" alt="Contact us icon">
                             </button>
                         </div>
                         <div class="footer-right-facebook" id="footer-right-facebook">
                             <a href="#" class="facebook-link-container" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
                                 <!-- Icon supplied by font awesome https://fontawesome.com/  -->
-                                <img src="{% static 'static_media/icons/home-facebook-brands.svg' %}"  class="social-media-icon" alt="Facebook social media icon">
+                                <img src="{% static 'static_media/icons/base-facebook-brands.svg' %}"  class="social-media-icon" alt="Facebook social media icon">
                             </a>
                         </div>
                     </div>
